app/assets/stylesheets/application.css.scss
/* Import all of Bootstrap's Css Components */

@import "bootstrap-sprockets";
@import "bootstrap";

@import "font-awesome";
@import "responsive.scss";

@import "admin/application";

body {
	padding-top: 70px;
}

header {
	@extend .page-header;
	position: relative;
	padding-bottom: 0px;
	
	&:first-child {
		margin-top: 20px;
	}
}

#meta_attributes {
	border: 1px solid grey;
	border-bottom: 1px solid grey;
	@extend .table;
	width: 65%;

	th {
		width: 35%;
	}

	tr:first-child {
		td, th {
			border-top: 0px;
		}
	}

	td, th {
		line-height: 24px !important;
	}
}

#attributes {
	@extend .table;
	@extend .table-condensed;
	width: 65%;

	th {
		width: 35%;
	}

	tr:first-child {
		td, th {
			border-top: 0px;
		}
	}

	td, th {
		line-height: 24px !important;
	}
}

ul.actions {
	@extend .list-unstyled;
	@extend .list-inline;
}

a.new, a.edit, a.delete {
	@extend .btn;
	
	&:before {
		font-family: "FontAwesome";
		padding-right: 0.5em;
	}
}

a.new {
	@extend .btn-success;

	&:before {
		@extend .fa-plus;
	}
}

a.edit {
	@extend .btn-primary;

	&:before {
		@extend .fa-pencil;
	}
}

a.delete {
	@extend .btn-danger;

	&:before {
		@extend .fa-trash;
	}
}

.alert-notice {
	@extend .alert-success;
}

.alert-alert {
	@extend .alert-danger;
}

form {
	max-width: 55%;
}

#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12px;
    margin: -7px;
    margin-bottom: 0px;
    background-color: #c00;
    color: #fff;
  }
  ul li {
    font-size: 12px;
    list-style: square;
  }
}

